--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Progate</title>
 　</head>
 　<body>
-    <h1 class="brandname">JOHN STORA</h1>
+    <img src="file:///C:/Users/desup/OneDrive/%E7%94%BB%E5%83%8F/%E8%83%8C%E6%99%AF/JOHN%20STORA%20%E3%83%AD%E3%82%B4.png">
 </body>
 </html>
