--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
-　<head>
-    <meta charset="utf-8">
-    <title>Progate</title>
-　</head>
-　<body>
-    <img src="file:///C:/Users/desup/OneDrive/%E7%94%BB%E5%83%8F/%E8%83%8C%E6%99%AF/JOHN%20STORA%20%E3%83%AD%E3%82%B4.png">
-</body>
-</html>
+    <head>
+        <meta charset="UTF-8">
+        <title>JOHN STORA HP</title>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
+    <body>
+    <div class=header>
+        <div class="header-logo"></div>
+
+        <div id="humberger">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
+        <div class="header-list">
+            <ul>
+                <li>商品</li>
+                <li>どんなブランドなのか</li>
+                <li>お問い合わせ</li>
+            </ul>
+        　　</div>
+
+    　　　 <img class="anime_test" src="file:///C:/Users/desup/OneDrive/%E7%94%BB%E5%83%8F/%E8%83%8C%E6%99%AF/JOHN%20STORA%20%E5%90%88%E4%BD%93%E3%83%AD%E3%82%B4.png">
+
+    </div>
